Minor wording and content updates.

--- a/hobbies.html
+++ b/hobbies.html
@@ -105,26 +105,10 @@
                 <div class="breakline"></div>
             </div>
             <div class="content">
-                <div class="content-title">Fencing</div>
+                <div class="content-title">Trying New Things</div>
                 <div class="content-item reverse">
                     <div class="img-container content-right">
-                        <img src="images/fencing.jpg" class="content-image"></img>
-                    </div>
-                    <div class="content-text">
-                        One of my best friends has been fencing for as long as I can remember, but it wasn't until early 2023 that I finally decided to give it a try myself.
-                        Turns out, I really enjoy swordfighting!
-                        A lot more goes into it than I had initially expected, and even now 9 months later I am still learning new things at every lesson.
-                        I have recently started practicing with the intermediate level fencers at my club, and getting to learn directly through bouts with them has been eye-opening.
-                        I lose easily ninety percent of these bouts, but I know each one is helping me grow more experienced as a fencer and get one step closer to beating them next time!
-                    </div>
-                </div>
-                <div class="breakline"></div>
-            </div>
-            <div class="content">
-                <div class="content-title">Trying New Things</div>
-                <div class="content-item">
-                    <div class="img-container content-left">
-                        <img src="images/newthings/snowboard_1.JPG" class="content-image"></img>
+                        <img src="images/newthings/mountain.jpg" class="content-image"></img>
                     </div>
                     <div class="content-text">
                         While all of the hobbies mentioned above are things I enjoy doing, I am always searching for new experiences which I've never done before.
@@ -135,10 +119,11 @@
                 </div>
                 <button onclick="toggle_visible('new')" class="img-button" id="button-new">Show additional images</button>
                 <div class="moreimages" id="images-new">
+                    <img src="images/newthings/snowboard_1.JPG" loading="lazy" class="additional-image"></img>
                     <img src="images/newthings/snowboard_2.JPG" loading="lazy" class="additional-image"></img>
                     <img src="images/newthings/kinkakuji.jpg" loading="lazy" class="additional-image"></img>
                     <img src="images/newthings/japan_2.jpg" loading="lazy" class="additional-image"></img>
-                    <img src="images/newthings/mountain.jpg" loading="lazy" class="additional-image"></img>
+                    <img src="images/newthings/fencing.jpg" loading="lazy" class="additional-image"></img>
                     <img src="images/newthings/waterfall.jpg" loading="lazy" class="additional-image"></img>
                     <img src="images/newthings/zipline.jpg" loading="lazy" class="additional-image"></img>
                     <img src="images/newthings/discgolf.JPG" loading="lazy" class="additional-image"></img>
