--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,7 @@
                     </div>
                     <div class="content-text">
                         While this was a project done for school alongside two of my friends, I still consider it the most fun and interesting project I was ever a part of.
-                        GEOFF (short for GEsture Operated Fake Firearm) is a modified Nerf turret attached to a mobile chassis, all controlled by two custom made sensor gloves.
+                        GEOFF (GEsture Operated Fake Firearm) is a modified Nerf turret attached to a mobile chassis, all controlled by two custom made sensor gloves.
                         The left hand controlled the driving by making a fist and tilting your hand, while the right hand controlled aiming and shooting the turret.
                         The aiming could either be done manually by tilting the right hand or setting it to automatically follow a trained target, and the firing was done by making a trigger pull gesture.
                         The tilt control was achieved by using accelerometers and IMUs, and this data was fed to a microcontroller using I2C serial communication.
