--- a/skills.html
+++ b/skills.html
@@ -38,16 +38,16 @@
                     </div>
                     <div class="content-text">
                         May 2019 marked the beginning of my career at Intel, which was as an intern working on pre-silicon hardware validation.
-                        This internship led into a second internship the following summer, and finally my full time job with Intel once I graduated with my master's degree which is my current job.
-                        While I had no prior experience with pre-silicon validation, I was able to quickly learn and master the skills this job required to succeed.
+                        This internship led into a second internship the following summer, and finally my current full time job with Intel once I graduated with my master's degree.
+                        While I had no prior experience with pre-silicon validation, I was able to quickly learn and master the skills this job requires to succeed.
                         My main job at Intel is to work with my colleagues to create tests and run simulations against the model the design team created,
-                        in order to catch any bugs before the design was eventually produced in silicon.
-                        This of course requires the programming skills to create tests and checkers in Systemverilog, but being able to efficiently
+                        in order to catch any bugs before the design is eventually produced in silicon.
+                        This of course requires the programming skills to create tests and checkers in SystemVerilog, but being able to efficiently
                         diagnose failures through error signatures, log file outputs, and waveforms is also vital to complete my work.
                         Communication skills are also useful as due to the complexity of modern computer chips, I often need to communicate with
                         teams and individuals I have never worked with in order to address issues.
-                        My immediate team often are able to help when I run into issues or otherwise become blocked, as we use the Scrum
-                        methodology for planning our tasks to ensure we could complete all of the work in a timely manner.
+                        My immediate team often are able to help when I run into issues or otherwise become blocked though, as we use the Scrum
+                        methodology for planning our tasks to ensure we can complete all of our work in a timely manner.
                     </div>
                 </div>
                 <div class="breakline"></div>
@@ -64,7 +64,7 @@
                         This opened up the opportunity to take AP Computer Science the next year though, which was taught in Java - the same programming language my favorite game at the time Minecraft was made in!
                         While I unfortunately did not create the next Minecraft, I did continue learning programming as I entered college where I learned C/C++ and MatLab for the first time.
                         C and C++ continued to be my main programming language throughout all of college, where I learned more advanced techniques, data structures, and algorithms.
-                        As my classes focused more on embedded systems I also learned Verilog and Systemverilog, the latter of which I have used extensively during my work at Intel.
+                        As my classes focused more on embedded systems I also learned Verilog and SystemVerilog, the latter of which I have used extensively during my work at Intel.
                         I also taught myself python for writing simple scripts and testing programming ideas, which has proved useful both at work and for hobby projects.
                     </div>
                 </div>
@@ -81,8 +81,8 @@
                         I often need to come up with interesting test cases to see if the processor design acts the way we expect it to, and if not, helping to figure out why.
                         Usually debugging a failure involves understanding the failure signature, searching through log files to determine when and how the program diverged
                         from expected behavior, and viewing waveforms of signals' values throughout a simulation.
-                        While all of my work is done in Systemverilog and simulations, the testing and debugging skills I have gained extend to other languages as well.
-                        Even in programs written in languages besides Systemverilog I have become adept at noticing edge cases which may cause code to fail,
+                        While almost all of my work is done in SystemVerilog and simulations, the testing and debugging skills I have gained extend to other languages as well.
+                        Even in programs written in languages besides SystemVerilog I have become adept at noticing edge cases which may cause code to fail,
                         and when failures happen unexpectedly, quickly reasoning through why.
                     </div>
                 </div>
@@ -97,10 +97,10 @@
                     <div class="content-text">
                         As useful as the Windows operating system and GUIs are, I have become right at home using Linux and command line interfaces to interact with computers.
                         I was introduced to them during my first college programming class, and they have been an integral part of my work ever since.
-                        They have helped me to streamline my workflow and to be capable of using many tools which I would struggle with otherwise, as well as
-                        becoming comfortable manipulating programs in more advanced ways I would not have been confident doing otherwise.
+                        They have helped me to streamline my workflow and become capable of using many tools which I would otherwise struggle with, as well as
+                        becoming comfortable manipulating programs in more advanced ways I would not have been confident doing without these skills.
                         Alongside these skills I also learned to use Git for version control, which has helped immensely in not only personal projects, but when working collaboratively as well.
-                        The ability to track changes over time or quickly pull in fixes from colleagues has saved me significant amounts of work in the past, and helped me quickly
+                        The ability to track changes over time or quickly pull in fixes from colleagues has saved me significant amounts of work in the past, and helped me easily
                         provide support for others as well.
                     </div>
                 </div>
@@ -114,10 +114,10 @@
                     </div>
                     <div class="content-text">
                         日本語は少し話せます！ Very different from the other skills listed on this page, but I can speak and write basic Japanese.
-                        Michigan does not have a language requirement for engineering students, so I was originally glad that I could take more engineering classes instead.
-                        But that changed when I decided to apply for a study abroad trip in Japan, at which point I began taking Japanese lessons at the beginning of my sohpomore year of college.
-                        I ended up being accepted to the study abroad program which took place the summer after my sophomore year, and on top of that I
-                        enjoyed my Japanese classes so much I continued taking them throughout my entire time at the University of Michigan.
+                        Michigan did not have a language requirement for engineering students, so I was originally glad that I could take more engineering classes instead.
+                        But that changed when I decided to apply for a study abroad trip in Japan, at which point I began taking Japanese lessons at the beginning of my sophomore year of college.
+                        I ended up being accepted to the study abroad program which took place during summer 2018, and on top of that I
+                        enjoyed my Japanese classes so much that I continued taking them throughout my entire time at the University of Michigan.
                         After these classes I am capable of holding simple conversations in Japanese, but I hope to continue practicing and someday be fluent enough to talk with native speakers without trouble.
                     </div>
                 </div>
@@ -131,12 +131,12 @@
                     </div>
                     <div class="content-text">
                         I was a part of my local scout troop from June 2009 up until I turned 18 in June 2016.
-                        During this time I worked to advance through the ranks of scouting, eventually reaching the highest rank of Eagle Scout.
+                        During this time I worked to advance through the ranks of scouting, eventually reached the highest rank of Eagle Scout.
                         In order to become an Eagle Scout, one of the requirements was to earn a total of 21 merit badges, including Citizenship in the World, Emergency Preparedness, and Communications.
                         Some of these required me to get far out of my comfort zone, such as the swimming merit badge since I always struggled with swimming when I was younger.
                         The other major requirement was to plan and complete a community service project, for which I replaced a damaged bridge spanning a small river in my town.
-                        This involved significant planning to ensure the project went smoothly and met all requirements, as well as leadership skills to recruit and supervise a large group of younger scouts.
-                        The final result was well received though and has seen much use since it was put in place.
+                        This involved significant planning to ensure the project went smoothly and met all the requirements, as well as leadership skills to recruit and supervise a large group of younger scouts.
+                        The final result was well received and has seen much use since it was put in place.
                     </div>
                 </div>
                 <button onclick="toggle_visible('eagle')" class="img-button" id="button-eagle">Show additional images</button>
