Updated some images and made some small wording fixes

--- a/hobbies.html
+++ b/hobbies.html
@@ -46,7 +46,8 @@
                 </div>
                 <button onclick="toggle_visible('games')" class="img-button" id="button-games">Show additional images</button>
                 <div class="moreimages" id="images-games">
-                    <img src="images/games/cs.jpg" loading="lazy" class="additional-image"></img>
+                    <img src="images/games/halo.jpg" loading="lazy" class="additional-image"></img>
+                    <img src="images/games/titanfall.jpg" loading="lazy" class="additional-image"></img>
                     <img src="images/games/btd.jpg" loading="lazy" class="additional-image"></img>
                     <img src="images/games/skyrim.jpg" loading="lazy" class="additional-image"></img>
                     <img src="images/games/trackmania.jpg" loading="lazy" class="additional-image"></img>
