--- a/valve.html
+++ b/valve.html
@@ -31,9 +31,9 @@
             <div class="content">
                 <div class="content-item">
                     <div class="content-text">
-                        If you're a Valve employee, hello and thank you for checking out my website!
-                        I wanted to take a minute to emphasize that I hold Valve in extremely high regard, and would love the opportunity to work alongside you there.
-                        I truly believe my skills and mindset would allow me to thrive and contribute a lot at Valve, and I hope you feel the same.
+                        If you are a Valve employee, hello and thank you for checking out my website!
+                        I wanted to take a moment to emphasize that I hold Valve in extremely high regard, and would love the opportunity to work alongside you there.
+                        I truly believe my skills and mindset would allow me to thrive and contribute greatly at Valve, and I hope you feel the same.
                         <br/><br/>
                         If you have any questions at all, don't hestitate to contact me! I would love to have the opportunity to talk with you.
                     </div>
