Updated images for hobbies page

--- a/hobbies.html
+++ b/hobbies.html
@@ -37,8 +37,8 @@
                         <img src="images/games/destiny.jpg" class="content-image"></img>
                     </div>
                     <div class="content-text">
-                        Whether I'm just hanging out online with friends in Counter-Strike or Golf With Your Friends, or 
-                        being transported to another world in Half-Life: Alyx and Destiny 2, video games are my favorite way to pass the time.
+                        Whether I'm hanging out online with friends in Destiny 2 or Golf With Your Friends, or 
+                        being transported to another world in Half-Life: Alyx or Skyrim, video games are my favorite way to pass the time.
                         This has become especially true with the advent of consumer virtual reality, where I can put on my Valve Index and become completely immersed in an entirely new universe.
                         Ever since trying VR for the first time years ago I have been fascinated both by the technology behind it, and the potential it has for incredible experiences.
                         I genuinely believe it is the future of entertainment, and hope to be a part of making that future a reality.
@@ -61,7 +61,7 @@
                 <div class="content-title">Drawing</div>
                 <div class="content-item reverse">
                     <div class="img-container content-right">
-                        <img src="images/art/foxes.jpg" class="content-image"></img>
+                        <img src="images/art/landscape.jpg" class="content-image"></img>
                     </div>
                     <div class="content-text">
                         As an engineer it is unsurprising that I enjoy creating things, but up until just over 2 months ago this had never included art of any kind.
@@ -73,12 +73,11 @@
                 </div>
                 <button onclick="toggle_visible('drawing')" class="img-button" id="button-drawing">Show additional images</button>
                 <div class="moreimages" id="images-drawing">
-                    <img src="images/art/shading.jpg" loading="lazy" class="additional-image"></img>
-                    <img src="images/art/stilllife.jpg" loading="lazy" class="additional-image"></img>
-                    <img src="images/art/housething.jpg" loading="lazy" class="additional-image"></img>
-                    <img src="images/art/maze.jpg" loading="lazy" class="additional-image"></img>
-                    <img src="images/art/perspective.jpg" loading="lazy" class="additional-image"></img>
+                    <img src="images/art/foxes.jpg" loading="lazy" class="additional-image"></img>
                     <img src="images/art/perspective_street.jpg" loading="lazy" class="additional-image"></img>
+                    <img src="images/art/guardian.jpg" loading="lazy" class="additional-image"></img>
+                    <img src="images/art/stilllife.jpg" loading="lazy" class="additional-image"></img>
+                    <img src="images/art/shading.jpg" loading="lazy" class="additional-image"></img>
                 </div>
                 <div class="breakline"></div>
             </div>
@@ -120,10 +119,8 @@
                 </div>
                 <button onclick="toggle_visible('new')" class="img-button" id="button-new">Show additional images</button>
                 <div class="moreimages" id="images-new">
-                    <img src="images/newthings/snowboard_1.JPG" loading="lazy" class="additional-image"></img>
-                    <img src="images/newthings/snowboard_2.JPG" loading="lazy" class="additional-image"></img>
-                    <img src="images/newthings/kinkakuji.jpg" loading="lazy" class="additional-image"></img>
-                    <img src="images/newthings/japan_2.jpg" loading="lazy" class="additional-image"></img>
+                    <img src="images/newthings/snowboarding.JPG" loading="lazy" class="additional-image"></img>
+d                    <img src="images/newthings/japan_temple.jpg" loading="lazy" class="additional-image"></img>
                     <img src="images/newthings/fencing.jpg" loading="lazy" class="additional-image"></img>
                     <img src="images/newthings/waterfall.jpg" loading="lazy" class="additional-image"></img>
                     <img src="images/newthings/zipline.jpg" loading="lazy" class="additional-image"></img>
