Added EEG device project section in the projects page and resume, and other minor content updates.

--- a/hobbies.html
+++ b/hobbies.html
@@ -27,7 +27,6 @@
             <a href="projects.html" class="projects">Projects</a>
             <a href="hobbies.html" class="hobbies">Hobbies</a>
             <a href="resume.html" class="resume">Resume</a>
-            <a href="valve.html" class="valve">Valve</a>
         </div>
         <div class="main content">
             <div class="content">
@@ -39,7 +38,7 @@
                     <div class="content-text">
                         Whether I'm hanging out online with friends in Destiny 2 or Golf With Your Friends, or 
                         being transported to another world in Half-Life: Alyx or Skyrim, video games are my favorite way to pass the time.
-                        This has become especially true with the advent of consumer virtual reality, where I can put on my Valve Index and become completely immersed in an entirely new universe.
+                        This has become especially true with the advent of consumer virtual reality, where I can put on my VR headset and become completely immersed in an entirely new universe.
                         Ever since trying VR for the first time years ago I have been fascinated both by the technology behind it, and the potential it has for incredible experiences.
                         I genuinely believe it is the future of entertainment, and hope to be a part of making that future a reality.
                     </div>
