minor fix for snowboarding image on hobbies page

--- a/hobbies.html
+++ b/hobbies.html
@@ -118,8 +118,8 @@
                 </div>
                 <button onclick="toggle_visible('new')" class="img-button" id="button-new">Show additional images</button>
                 <div class="moreimages" id="images-new">
-                    <img src="images/newthings/snowboarding.JPG" loading="lazy" class="additional-image"></img>
-d                    <img src="images/newthings/japan_temple.jpg" loading="lazy" class="additional-image"></img>
+                    <img src="images/newthings/snowboarding.jpg" loading="lazy" class="additional-image"></img>
+					<img src="images/newthings/japan_temple.jpg" loading="lazy" class="additional-image"></img>
                     <img src="images/newthings/fencing.jpg" loading="lazy" class="additional-image"></img>
                     <img src="images/newthings/waterfall.jpg" loading="lazy" class="additional-image"></img>
                     <img src="images/newthings/zipline.jpg" loading="lazy" class="additional-image"></img>
