--- a/hobbies.html
+++ b/hobbies.html
@@ -60,23 +60,24 @@
                 <div class="content-title">Drawing</div>
                 <div class="content-item reverse">
                     <div class="img-container content-right">
-                        <img src="images/art/landscape.jpg" class="content-image"></img>
+                        <img src="images/art/shading.jpg" class="content-image"></img>
                     </div>
                     <div class="content-text">
-                        As an engineer it is unsurprising that I enjoy creating things, but up until just over 2 months ago this had never included art of any kind.
-                        It has always been something I hoped to learn, but I lacked the confidence to actually start.
-                        But after years of putting it off, I finally convinced myself to sign up for a drawing class during July of 2023 and have been practicing ever since!
-                        I of course have a LOT to learn about drawing, but I am enjoying trying out different topics and mediums to figure out what my favorites are.
+                        As an engineer it is unsurprising that I enjoy creating things, but up until recently this had never included art of any kind.
+                        Drawing has always been something I had hoped to learn, but it wasn't until I finally convinced myself to sign up for a drawing class that I began to take it seriously.
+                        I of course have a LOT to learn about drawing, but I am enjoying trying out different topics and mediums to figure out what my favorites are!
                         Someday I hope to be able to illustrate any characters and stories that I imagine, even though this seems like a huge mountain to climb.
                     </div>
                 </div>
                 <button onclick="toggle_visible('drawing')" class="img-button" id="button-drawing">Show additional images</button>
                 <div class="moreimages" id="images-drawing">
                     <img src="images/art/foxes.jpg" loading="lazy" class="additional-image"></img>
-                    <img src="images/art/perspective_street.jpg" loading="lazy" class="additional-image"></img>
                     <img src="images/art/guardian.jpg" loading="lazy" class="additional-image"></img>
+                    <img src="images/art/eyes.jpg" loading="lazy" class="additional-image"></img>
+                    <img src="images/art/hehehe.jpg" loading="lazy" class="additional-image"></img>
+                    <img src="images/art/shapes.jpg" loading="lazy" class="additional-image"></img>
                     <img src="images/art/stilllife.jpg" loading="lazy" class="additional-image"></img>
-                    <img src="images/art/shading.jpg" loading="lazy" class="additional-image"></img>
+                    <img src="images/art/landscape.jpg" loading="lazy" class="additional-image"></img>
                 </div>
                 <div class="breakline"></div>
             </div>
@@ -107,23 +108,23 @@
                 <div class="content-title">Trying New Things</div>
                 <div class="content-item reverse">
                     <div class="img-container content-right">
-                        <img src="images/newthings/mountain.jpg" class="content-image"></img>
+                        <img src="images/newthings/suomelinna.jpg" class="content-image"></img>
                     </div>
                     <div class="content-text">
-                        While all of the hobbies mentioned above are things I enjoy doing, I am always searching for new experiences which I've never done before.
-                        This includes anything from learning to snowboard which I did last winter, to trying to teach myself game dev using the Godot engine,
-                        to travelling to a location I have never been to such as my study abroad trip in Japan during my undergraduate degree.
+                        While the hobbies mentioned above are things I enjoy doing, I am always searching for new experiences which I've never had before.
+                        This includes anything from learning to snowboard, to taking a class in blacksmithing, to travelling to a location I have never been to such as Japan or Finland.
                         While I might not keep up with every single activity as consistently as my other hobbies, seeing all the fun things the world has to offer has become a hobby in and of itself!
                     </div>
                 </div>
                 <button onclick="toggle_visible('new')" class="img-button" id="button-new">Show additional images</button>
                 <div class="moreimages" id="images-new">
                     <img src="images/newthings/snowboarding.jpg" loading="lazy" class="additional-image"></img>
-					<img src="images/newthings/japan_temple.jpg" loading="lazy" class="additional-image"></img>
+                    <img src="images/newthings/blacksmithing.jpg" loading="lazy" class="additional-image"></img>
+                    <img src="images/newthings/japan.jpg" loading="lazy" class="additional-image"></img>
+                    <img src="images/newthings/plane.jpg" loading="lazy" class="additional-image"></img>
                     <img src="images/newthings/fencing.jpg" loading="lazy" class="additional-image"></img>
-                    <img src="images/newthings/waterfall.jpg" loading="lazy" class="additional-image"></img>
                     <img src="images/newthings/zipline.jpg" loading="lazy" class="additional-image"></img>
-                    <img src="images/newthings/discgolf.JPG" loading="lazy" class="additional-image"></img>
+					<img src="images/newthings/climbing.jpg" loading="lazy" class="additional-image"></img>
                 </div>
             </div>
         </div>
